standards/gnds-2.0/test/c/src/v2.0/tsl/FreeGasApproximation.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// FreeGasApproximation is the basic handle type in this file. Example:
//    // Create a default FreeGasApproximation object:
//    FreeGasApproximation handle = FreeGasApproximationDefault();
// Functions involving FreeGasApproximation are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_TEST_V2_0_TSL_FREEGASAPPROXIMATION
#define C_INTERFACE_TEST_V2_0_TSL_FREEGASAPPROXIMATION

#include "GNDStk.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct FreeGasApproximationClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ FreeGasApproximation
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct FreeGasApproximationClass *FreeGasApproximation;

// --- Const-aware handles.
typedef const struct FreeGasApproximationClass *const ConstHandle2ConstFreeGasApproximation;
typedef       struct FreeGasApproximationClass *const ConstHandle2FreeGasApproximation;
typedef const struct FreeGasApproximationClass *      Handle2ConstFreeGasApproximation;
typedef       struct FreeGasApproximationClass *      Handle2FreeGasApproximation;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstFreeGasApproximation
FreeGasApproximationDefaultConst();

// +++ Create, default
extern_c Handle2FreeGasApproximation
FreeGasApproximationDefault();

// --- Create, general, const
extern_c Handle2ConstFreeGasApproximation
FreeGasApproximationCreateConst();

// +++ Create, general
extern_c Handle2FreeGasApproximation
FreeGasApproximationCreate();

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
FreeGasApproximationAssign(ConstHandle2FreeGasApproximation This, ConstHandle2ConstFreeGasApproximation from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
FreeGasApproximationDelete(ConstHandle2ConstFreeGasApproximation This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
FreeGasApproximationRead(ConstHandle2FreeGasApproximation This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
FreeGasApproximationWrite(ConstHandle2ConstFreeGasApproximation This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
FreeGasApproximationPrint(ConstHandle2ConstFreeGasApproximation This);

// +++ Print to standard output, as XML
extern_c int
FreeGasApproximationPrintXML(ConstHandle2ConstFreeGasApproximation This);

// +++ Print to standard output, as JSON
extern_c int
FreeGasApproximationPrintJSON(ConstHandle2ConstFreeGasApproximation This);


// -----------------------------------------------------------------------------
// Done
// -----------------------------------------------------------------------------

#undef extern_c
#endif